--- a/www/index.html
+++ b/www/index.html
@@ -21,8 +21,15 @@
             $("#disp1").css("background", "lightgray");
 
             var a=0;
-            var txt="";
+            var txt=" ";
             txt+="a:"+a+"<br>";
+             if(a=1){
+                txt+="TRUE<br>";
+                }else{
+                     txt+="FALSE<br>" ;
+                     }
+            txt+="a:"+a+"<br>";
+
             $("#disp2").html(txt);
         }
     </script>
